# currencyconverter

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  MANIFEST.in  README.md  README.rst  _config.yml  conftest.py  currency_converter.py  eurofxref-hist.csv  index.html  index.md  params.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.py  test_main.py  tox.ini  update_data.sh  update_ecb_data.sh
.github/workflows/: python-package.yml
currency_converter/: __init__.py  __main__.py  currency_converter.py  eurofxref-hist.csv  eurofxref.csv  test_single_day.csv  update_data.sh
currency_converter/sources/: s3.py
doc/: Makefile  conf.py  index.rst  make.bat
