[metadata]
name = CurrencyConverter
description = A currency converter using the European Central Bank data.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/alexprengere/currencyconverter
author = Alex Prengère
author_email = alex.prengere@gmail.com
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6.1
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    currency_converter = currency_converter.__main__:main
